Update Midterm Prep build

--- a/midterm-prep/package.json
+++ b/midterm-prep/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://lucas1792003.github.io/midterm-prep",
+  "homepage": "https://lucas1792003.github.io/waiyanpaing.github.io//midterm-prep",
 
   "scripts": {
     "dev": "vite",
