--- a/midterm-prep1/package.json
+++ b/midterm-prep1/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://lucas1792003.github.io/waiyanpaing.github.io//midterm-prep1",
+  "homepage": "https://lucas1792003.github.io/waiyanpaing.github.io/midterm-prep1",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
